# ipc-sample

./: .gitmodules  CMakeLists.txt  README.md
include/: dummy_api.h
protocol/: rima.pb.cc  rima.pb.h  rima.proto
src/: main.cpp
